--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-core": "^6.9.1",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "redis": "^2.6.4"
   },
   "devDependencies": {
     "babel-preset-airbnb": "^2.0.0",
